@@ -6,6 +6,7 @@
    */
 
 define('BLOG_VIEW_DATE_FORMAT', '%H:%M, %A, %B %e');
+define('BLOG_PAGER_DATE_FORMAT', '%R - %e %b, %C');
 define('MAX_BLOG_CACHE_PAGES', 3);
 
 ?>
